--- a/style.css
+++ b/style.css
@@ -1,9 +1,36 @@
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 8px;
-    gap: 8px;
+    gap: 12px;
+}
+
+.headertext {
+    font-size: small;
+}
+
+img {
+    max-height: 30px;
+    max-width: 30px;
+}
+
+.famphoto {
+    border-radius: 10px;
+    max-height: 30px;
+    max-width: 30px;
+}
+
+.dotsphoto {
+    width: 30px;
+    height: 30px;
 }
 
 .middle {
@@ -12,6 +39,7 @@ header {
     align-items: center;
     flex-direction: column;
     gap: 20px;
+    margin-top: -100px;
 }
 
 h1 {
@@ -20,30 +48,33 @@ h1 {
     align-items: center;
     gap: 2px;
     max-width: 200px;
+    font-size: 100px;
+    margin-bottom: -15px;
+    font-family:sans-serif;
 }
 
 .g {
-    color: blue;
+    color: #4285F4;
 }
 
 .o {
-    color: red;
+    color: #DB4437;
 }
 
 .o2 {
-    color: yellow;
+    color: #F4B400;
 }
 
 .g2 {
-    color: blue;
+    color: #4285F4;
 }
 
 .l {
-    color: green;
+    color: #0f9d58;
 }
 
 .e {
-    color: red;
+    color: #DB4437;
 }
 
 .searchbar {
@@ -53,7 +84,14 @@ h1 {
     border: solid gray 1px;
     border-radius: 8px;
     box-shadow: gray;
-    max-width: 400px;
+    width: 600px;
+    height: 40px;
+    padding: 8px;
+    border-radius: 30px;
+}
+
+.searchtext {
+    margin-right: 250px;
 }
 
 .recommended {
@@ -62,7 +100,22 @@ h1 {
     align-items: center;
     flex-wrap: wrap;
     gap: 35px;
-    max-width: 350px;
+    max-width: 555px;
+}
+
+.imgb {
+    height: 70px;
+    width: 70px;
+    border-radius: 40px;
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imgb1 {
+    height: 45px;
+    width: 45px;
 }
 
 .r {
@@ -76,6 +129,16 @@ h1 {
 
 .rtext {
     text-align: center;
+    font-size: small;
+}
+
+ .plus {
+    font-size: xx-large;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer {
@@ -90,7 +153,27 @@ button {
     justify-content: space-between;
     align-items: center;
     border: solid gray 1px;
-    border-radius: 8px;
-    box-shadow: gray;
+    border-radius: 18px;
     padding: 8px;
+    background-color: white;
+    height: 25px;
+    width: 180px;
+    margin-bottom: 20px;
+}
+
+.penpi {
+    height: 15px;
+    width: 15px;
+    margin-left: 10px;
+}
+
+.penpic {
+    height: 12px;
+    width: 12px;
+}
+
+.buttontext {
+    font-weight: 100;
+    color: blue;
+    margin-right: 10px;
 }
