--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ img {
 }
 
 .famphoto {
-    border-radius: 10px;
+    border-radius: 40px;
     max-height: 30px;
     max-width: 30px;
 }
@@ -50,7 +50,7 @@ h1 {
     max-width: 200px;
     font-size: 100px;
     margin-bottom: -15px;
-    font-family:sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 .g {
@@ -107,7 +107,7 @@ h1 {
     height: 70px;
     width: 70px;
     border-radius: 40px;
-    background-color: lightgray;
+    background-color: rgb(240, 238, 238);
     display: flex;
     justify-content: center;
     align-items: center;
